<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="350dp">

    <LinearLayout
        android:id="@+id/lin_date_choose_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="220dp">

        <ListView
            android:overScrollMode="never"
            android:background="@color/dark_blue"
            android:id="@+id/lsv_year"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>

        <GridLayout
            android:id="@+id/grd_month_content"
            android:background="@android:color/black"
            android:paddingRight="15dp"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:columnCount="3"
            android:rowCount="4"
            android:orientation="horizontal"
            android:layout_height="match_parent">

            <Button
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"
                style="@style/month_button"
                android:text="@string/January"/>
            <Button
                android:layout_columnWeight="1"
                style="@style/month_button"
                android:layout_gravity="fill_horizontal"
                android:text="@string/February"/>
            <Button
                android:layout_columnWeight="1"
                style="@style/month_button"
                android:layout_gravity="fill_horizontal"
                android:text="@string/March"/>
            <Button
                android:layout_columnWeight="1"
                style="@style/month_button"
                android:layout_gravity="fill_horizontal"
                android:text="@string/April"/>
            <Button
                android:layout_columnWeight="1"
                style="@style/month_button"
                android:layout_gravity="fill_horizontal"
                android:text="@string/May"/>
            <Button
                android:layout_columnWeight="1"
                style="@style/month_button"
                android:layout_gravity="fill_horizontal"
                android:text="@string/June"/>
            <Button
                android:layout_columnWeight="1"
                style="@style/month_button"
                android:layout_gravity="fill_horizontal"
                android:text="@string/July"/>
            <Button
                android:layout_columnWeight="1"
                style="@style/month_button"
                android:layout_gravity="fill_horizontal"
                android:text="@string/August"/>
            <Button
                android:layout_columnWeight="1"
                style="@style/month_button"
                android:layout_gravity="fill_horizontal"
                android:text="@string/September"/>
            <Button
                android:layout_columnWeight="1"
                style="@style/month_button"
                android:layout_gravity="fill_horizontal"
                android:text="@string/October"/>
            <Button
                android:layout_columnWeight="1"
                style="@style/month_button"
                android:layout_gravity="fill_horizontal"
                android:text="@string/November"/>
            <Button
                android:layout_columnWeight="1"
                style="@style/month_button"
                android:layout_gravity="fill_horizontal"
                android:text="@string/December"/>

        </GridLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/lin_date_choose_content"
        android:background="@android:color/black"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <Button
            android:id="@+id/btn_date_picker_this_month"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/shape_blue_round_bound_btn_bg"
            android:text="@string/this_month"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            style="?android:attr/borderlessButtonStyle"/>

        <android.mobile.datacvg.semp.Widget.DrawableHorizontalButton
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/shape_green_round_bound_btn_bg"
            android:drawableLeft="@mipmap/datapicker_ok"
            android:drawablePadding="10dp"
            android:text="@string/for_sure"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/btn_date_picker_for_cancel"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/shape_brown_round_bound_btn_bg"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/for_cancel"
            android:onClick="closeDataPickerView"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>

</RelativeLayout>
